generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Product {
  id          String   @id @default(cuid())
  sku         String   @unique
  name        String
  slug        String   @unique
  price       Float
  category    String
  description String
  tag         String?
  image       String?
  active      Boolean  @default(true)
  isExample   Boolean  @default(false)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  orderItems OrderItem[]
}

model Inquiry {
  id        String   @id @default(cuid())
  name      String
  email     String
  subject   String
  message   String
  status    String   @default("new")
  notes     String   @default("")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Order {
  id              String   @id @default(cuid())
  stripeSessionId String?  @unique
  stripePaymentId String?
  customerName    String
  customerEmail   String
  total           Float
  status          String   @default("pending-payment")
  shippingAddress String?
  trackingNumber  String?
  notes           String   @default("")
  items           OrderItem[]
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
}

model OrderItem {
  id        String  @id @default(cuid())
  orderId   String
  productId String
  quantity  Int     @default(1)
  price     Float

  order   Order   @relation(fields: [orderId], references: [id])
  product Product @relation(fields: [productId], references: [id])
}

model Setting {
  key   String @id
  value String
}
